Revision history for {{$dist->name}}

{{$NEXT}}
          More tests to improve general function coverage

0.01011421 2010-12-19 22:52:17 Pacific/Auckland
          Reworked the Exception code to be cleaner at the cost of a slight
          initialisatin cost.

          Reworked code bodies to unify seek/tell calls as _restore_pos and _set_pos.

          Added _fh so internal code is less confusing.

          Extended tests to cover more scenarios.

          Added contributed suggestions as "alternative_techinques" with demonstrations how they
          *( so far ) don't work. If people can get them to work (on all perls), that'd be great!.
          ( Seems there are many weird fdup bugs in perl )

          Stolen the backtrace code from Carp a bit and augmented it, now produce useful backtraces.

          Have some nice code in our exception stringification that highlights lines with colours based on
          how much we think they're related to the problem.

            Stuff thats part of DH ( the place the error was detected ) is highlighted green as we think it
            will be usefull in diagnosis, but its not the source of the problem.

            Stuff that we know is likely to be infrastructural and not likely to be part of the problem
            ( ie: code like Try::Tiny and Test::Fatal ) are highlighted yellow because we doubt its useful.

            Everything else is left white, and you should look for the problem there first.

          Changes                                           |   40 +++++
          lib/Data/Handle.pm                                |  151 +++++++------------
          lib/Data/Handle/Exception.pm                      |  165 +++++++++++++++++----
          perlcritic.rc                                     |    2 +-
          t/01_lowlevel.t                                   |   25 +++
          t/02_example.t                                    |    4 +-