@@ -22,7 +22,7 @@ The idea is for more complex things to use this, instead of this using more comp
 
 As such, a dependency on something like Moose would be overkill, possibly even detrimental to encouraging the use of this module.
 
-So we've scrimped and gone really cheap ( for now at least ) in a few places to skip adding downstream dependencies, so this module is a really really nasty but reasonably straight forward exception class.
+So we've scrimped and gone really cheap ( for now at least ) in a few places to skip adding downstream dependencies, so this module is a slightly nasty but reasonably straight forward exception class.
 
 The actual Exception classes don't actually have their own sources, they're automatically generated when L<Data::Handle::Exception> is loaded.
 And we have some really nice backtraces stolen from Carp's code, with some sexy coloured formatting. See L/stringify> for details.
@@ -190,42 +190,6 @@ sub _gen_tree {
     $self->_gen( $class, $parent );
   }
   return $class;
-}
-
-=method generate_exception
-
-    my $i = Data::Handle::Exception->generate_exception(
-        'Foo::Bar' => 'SomeMessage'
-    );
-
-    # $i isa Data::Handle::Exception::Foo::Bar
-    # Data::Handle::Exception::Foo::Bar isa
-    #    Data::Handle::Exception::Foo
-    #
-    # Data::Handle::Exception::Foo isa
-    #   Data::Handle::Exception
-    #
-    # $i has a message and a stack-trace
-    #
-
-    $i->throw():
-
-
-=cut
-
-sub generate_exception {
-  my ( $self, $class, $message ) = @_;
-
-  # $class =~ s/^(Data::Handle::Exception::|)//x;  # remove prefix if already there.
-  my $fullclass = $self->_gen_tree("Data::Handle::Exception::$class");
-
-  if ($message) {
-    return $fullclass->new()->throw($message);
-  }
-  else {
-    return $fullclass->new();
-  }
-
 }
 
 for (qw( API::Invalid API::Invalid::Params API::NotImplemented Internal::BadGet NoSymbol BadFilePos )) {
