@@ -3,6 +3,14 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           More tests to improve general function coverage
 
+          generate_exception is gone, depercated. Replace:
+
+            generate_exception($class , $message)->throw() 
+        
+          with
+
+            _gen_tree($full_class)->throw( $message )
+
 0.01011421 2010-12-19 22:52:17 Pacific/Auckland
           Reworked the Exception code to be cleaner at the cost of a slight
           initialisatin cost.
